--- a/index.html
+++ b/index.html
@@ -54,6 +54,71 @@
               <p><strong>Ерлан Сагымбаев</strong></p>
             </div>
             <div class="col-lg-4 col-md-6 col-12 text-center mb-4">
+              <img src="https://www.khl.ru/images/trainers/1124.jpg" alt="Евгений Королев" class="img-fluid rounded">
+              <p><strong>Евгений Королев</strong></p>
+            </div>
+          </div>
+        </section>
+
+        <section id="players">
+          <h2>Игроки</h2>
+          <table class="table table-bordered table-striped">
+            <thead class="table-primary">
+              <tr><th>Номер</th><th>Игрок</th></tr>
+            </thead>
+            <tbody>
+              <tr><td>1</td><td>НИКИТА БОЯРКИН</td></tr>
+              <tr><td>33</td><td>ЮХАН МАТТССОН</td></tr>
+              <tr><td>43</td><td>АНДРЕЙ ШУТОВ</td></tr>
+              <tr><td>8</td><td>НИКИТА КАМАЛОВ</td></tr>
+              <tr><td>27</td><td>БЕЙБАРЫС ОРАЗОВ</td></tr>
+            </tbody>
+          </table>
+        </section>
+      </div>
+
+      <!-- SIDEBAR -->
+      <aside class="col-lg-4 col-md-4 col-12 bg-light p-3 rounded" id="contacts">
+        <h4>Контакты</h4>
+        <p><strong>Email:</strong> info@barys.kz</p>
+        <p><strong>Телефон:</strong> +7 (7172) 123 456</p>
+        <h4>Социальные сети</h4>
+        <ul>
+          <li><a href="https://www.instagram.com/barys_official" target="_blank">Instagram</a></li>
+          <li><a href="https://www.tiktok.com/@barys_official" target="_blank">TikTok</a></li>
+          <li><a href="https://youtube.com/@barystv" target="_blank">YouTube</a></li>
+        </ul>
+      </aside>
+    </div>
+  </main>
+
+  <footer class="bg-dark text-center text-white py-3">
+    <p>© 2025 ХК «Барыс». Все права защищены.</p>
+  </footer>
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+</body>
+</html>
+      <div class="col-lg-8 col-md-8 col-12">
+        <section id="overview" class="mb-4">
+          <h2>Обзор</h2>
+          <p>Хоккейный клуб «Барыс» — казахстанская профессиональная команда из Астаны, основанная в 1999 году. Клуб представляет Казахстан в Континентальной хоккейной лиге (КХЛ) и считается одной из самых известных хоккейных команд страны. Домашние матчи «Барыс» проводит на «Барыс Арене» — современном ледовом дворце. Команда известна своей энергичной игрой, сильными нападающими и поддержкой болельщиков. За годы существования «Барыс» неоднократно выходил в плей-офф КХЛ и воспитал многих игроков, выступающих за сборную Казахстана.
+</p>
+          <iframe src="https://www.youtube.com/embed/BypKW8Xtnts" title="Видео о команде Барыс"></iframe>
+        </section>
+
+        <section id="coaches" class="mb-4">
+          <h2>Тренерский состав</h2>
+          <div class="row">
+            <div class="col-lg-4 col-md-6 col-12 text-center mb-4">
+              <img src="https://www.khl.ru/images/trainers/374.jpg" alt="Галым Мамбеталиев" class="img-fluid rounded">
+              <p><strong>Галым Мамбеталиев</strong></p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 text-center mb-4">
+              <img src="https://ru.hcbarys.kz/upload/iblock/726/xyss2obbzh96w5k01aoxyxf4baw5awm5/Sagymbayev_23.png" alt="Ерлан Сагымбаев" class="img-fluid rounded">
+              <p><strong>Ерлан Сагымбаев</strong></p>
+            </div>
+            <div class="col-lg-4 col-md-6 col-12 text-center mb-4">
               <img src="/Users/lejlazunisbekova/Desktop/web4/320.jpg" alt="Евгений Королев" class="img-fluid rounded">
               <p><strong>Евгений Королев</strong></p>
             </div>
